--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.8",
     "babel-loader": "^9.1.3",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
+    "jest": "^29.7.0",
     "prettier": "3.1.1",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
