--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "template",
+  "name": "",
   "version": "1.0.0",
-  "description": "template to be used for new repositories",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "gitHubPrep": "git subtree push --prefix dist origin gh-pages"
   },
   "author": "YonugJones",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/preset-env": "^7.23.8",
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
